<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/md_sys_margin_medium"
            android:layout_marginEnd="@dimen/md_sys_margin_medium"
            android:orientation="vertical"
            android:paddingBottom="@dimen/md_sys_margin_bottom_max">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:text="@string/switch_color_guide"
                    android:textSize="@dimen/header_text_size" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="true"
                    android:text="@string/switch_enabled" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/switch_enabled" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:text="@string/switch_disabled_guide"
                    android:textSize="@dimen/header_text_size" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/switch_disabled" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="false"
                    android:text="@string/switch_disabled" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:text="@string/switch_icon_guide"
                    android:textSize="@dimen/header_text_size" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="true"
                    android:text="@string/switch_enabled"
                    app:thumbIcon="@drawable/ic_switch_check" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="true"
                    android:text="@string/switch_enabled"
                    app:thumbIcon="@drawable/ic_switch_check"
                    app:thumbIconSize="24dp" />

            </GridLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_sys_margin_mini"
                android:layout_marginTop="@dimen/md_sys_margin_small"
                android:layout_marginBottom="@dimen/md_sys_margin_small"
                android:background="?attr/colorSecondary"
                android:contentDescription="@string/switch_enabled" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_toggle_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:enabled="true"
                android:text="@string/switch_toggleable_description"
                android:textSize="@dimen/header_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/md_sys_margin_small"
                android:orientation="vertical">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_toggled_child_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/switch_toggle" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_toggled_child_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="false"
                    android:text="@string/switch_toggle" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_sys_margin_mini"
                android:layout_marginTop="@dimen/md_sys_margin_small"
                android:layout_marginBottom="@dimen/md_sys_margin_small"
                android:background="?attr/colorSecondary"
                android:contentDescription="@string/switch_toggle" />

        </LinearLayout>

    </ScrollView>

</layout>